# ai-eaap-sdk

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: agents-are-modeling-not-ui.html  sdk-adoption-pitch.html  sdk-business-ai-engineer-survival-guide.html  sdk-code-first-vs-ui.html  sdk-engineer-handbook.html  sdk-leadership-deck.html  sdk-leadership-slides.html  sdk-platform-engineer-survival-guide.html  sdk-stack-and-lock-in.html  settings.md  testing.md
docs/superpowers/plans/: 2026-05-04-ai-core-sdk-phase-1.md  2026-05-04-ai-core-sdk-phase-2.md  2026-05-05-ai-core-sdk-phase-3.md  2026-05-05-ai-core-sdk-phase-4.md  2026-05-05-ai-core-sdk-phase-5.md  2026-05-05-ai-core-sdk-phase-6.md  2026-05-06-ai-core-sdk-phase-10.md  2026-05-06-ai-core-sdk-phase-11.md  2026-05-06-ai-core-sdk-phase-12.md  2026-05-06-ai-core-sdk-phase-13.md  2026-05-06-ai-core-sdk-phase-7.md  2026-05-06-ai-core-sdk-phase-8.md  2026-05-06-ai-core-sdk-phase-9.md
docs/superpowers/specs/: 2026-05-04-ai-core-sdk-phase-1-design.md  2026-05-04-ai-core-sdk-phase-2-design.md  2026-05-05-ai-core-sdk-phase-3-design.md  2026-05-05-ai-core-sdk-phase-4-design.md  2026-05-05-ai-core-sdk-phase-5-design.md  2026-05-05-ai-core-sdk-phase-6-design.md  2026-05-06-ai-core-sdk-phase-10-design.md  2026-05-06-ai-core-sdk-phase-11-design.md  2026-05-06-ai-core-sdk-phase-12-design.md  2026-05-06-ai-core-sdk-phase-13-design.md  2026-05-06-ai-core-sdk-phase-7-design.md  2026-05-06-ai-core-sdk-phase-8-design.md  2026-05-06-ai-core-sdk-phase-9-design.md
examples/agent_demo/: README.md  run.py
examples/deep_demo/: run.py
examples/fastapi_integration/: README.md  app.py
examples/harness_demo/: run.py
examples/math_tutor/: run.py
examples/mcp_server_demo/: README.md  agent_demo.py  prompt_demo.py  run_client.py  server.py
examples/planner_demo/: run.py
examples/supervisor_demo/: README.md  run.py
examples/testing_demo/: README.md  conftest.py  pyproject.toml
examples/testing_demo/src/: my_agent.py
examples/testing_demo/tests/: test_my_agent.py
examples/verifier_demo/: run.py
scripts/: generate_settings_doc.py  run_examples.sh
src/ai_core/: __init__.py  exceptions.py
src/ai_core/agents/: __init__.py  _resolver.py  base.py  deep.py  harness.py  memory.py  planning.py  runtime.py  state.py  supervisor.py  tool_errors.py  verifier.py
src/ai_core/app/: __init__.py  runtime.py
src/ai_core/audit/: __init__.py  datadog.py  interface.py  jsonl.py  null.py  otel_event.py  registry.py  sentry.py
src/ai_core/audit/redaction/: __init__.py  chain.py  key_name.py  regex.py
src/ai_core/cli/: __init__.py  main.py  scaffold.py
src/ai_core/cli/templates/init/: README.md.j2  _DOT_env.example  _DOT_gitignore  docker-compose.yaml  eaap.yaml.j2  otel-collector-config.yaml  pyproject.toml.j2
src/ai_core/config/: __init__.py  secrets.py  settings.py  validation.py
src/ai_core/di/: __init__.py  container.py  interfaces.py  module.py
src/ai_core/health/: __init__.py  interface.py  probes.py
src/ai_core/llm/: __init__.py  _prompt_cache.py  _raise.py  budget.py  litellm_client.py  module.py
src/ai_core/mcp/: __init__.py  _pool.py  prompts.py  registry.py  resolver.py  tools.py  transports.py
src/ai_core/observability/: __init__.py  logging.py  noop.py  real.py
src/ai_core/persistence/: __init__.py  checkpoint.py  engine.py  langgraph_checkpoint.py  models.py
src/ai_core/schema/: __init__.py  export.py  registry.py
src/ai_core/security/: __init__.py  fastapi_dep.py  guardrail.py  jwt.py  noop_policy.py  opa.py
src/ai_core/testing/: __init__.py  fakes.py  llm.py  pytest_plugin.py
src/ai_core/tools/: __init__.py  decorator.py  factory.py  invoker.py  middleware.py  registrar.py  resolver.py  spec.py
tests/: conftest.py
tests/component/: test_agent_run.py  test_agent_tool_loop.py  test_deep_run.py  test_harness_run.py  test_planning_run.py  test_supervisor_run.py  test_verifier_run.py
tests/contract/: conftest.py  test_audit_invariants.py  test_container_lifecycle.py  test_exception_invariants.py  test_health_invariants.py  test_lazy_imports.py  test_public_surface.py
tests/integration/: conftest.py  test_database_integration.py  test_opa_integration.py
tests/integration/mcp/: test_agent_uses_mcp.py  test_prompts.py
tests/unit/: test_conftest_fakes.py  test_exceptions.py  test_top_level_imports.py
tests/unit/agents/: test_baggage.py  test_base_mcp.py  test_deep.py  test_harness.py  test_memory.py  test_planning.py  test_recursion.py  test_supervisor.py  test_verifier.py
tests/unit/app/: test_runtime.py
tests/unit/audit/: test_datadog_sink.py  test_di_binding.py  test_interface.py  test_jsonl_sink.py  test_never_raises.py  test_otel_event_sink.py  test_sentry_sink.py
tests/unit/audit/redaction/: test_chain_redactor.py  test_key_name_redactor.py  test_redaction_profile.py  test_regex_redactor.py
tests/unit/cli/: test_main.py
tests/unit/config/: test_secrets.py  test_settings.py  test_settings_doc_drift.py  test_validation.py  test_yaml_config.py
tests/unit/di/: test_container.py  test_lifecycle.py  test_memory_binding.py  test_module_security.py  test_module_tool_invoker.py
tests/unit/exceptions/: test_error_code.py  test_typed_details.py
tests/unit/health/: test_interface.py  test_never_raises.py  test_opa_health_path.py  test_probes.py
tests/unit/llm/: test_budget.py  test_litellm_client.py  test_prompt_cache.py
tests/unit/mcp/: test_pool.py  test_prompts.py  test_registry.py  test_resolver.py  test_tools.py  test_transports.py
tests/unit/observability/: test_logging.py  test_real.py
tests/unit/persistence/: test_langgraph_checkpoint.py
tests/unit/schema/: test_export.py  test_registry.py
tests/unit/security/: test_fastapi_dep.py  test_guardrail.py  test_jwt.py  test_noop_policy.py  test_opa.py
tests/unit/testing/: test_fakes.py  test_make_llm_response.py  test_pytest_plugin.py  test_scripted_llm.py
tests/unit/tools/: test_decorator.py  test_factory.py  test_invoker.py  test_middleware.py  test_spec.py
(+5 files in other folders)
